Worked on fpo apis
