# routes/api.php
@@ -28,6 +28,7 @@ Route::get('/agent/{id}', [AgentController::class, 'show']);
 Route::post('/agent/{id}/update', [AgentController::class, 'update']);
 
 Route::get('/fpos', [FPOController::class, 'index']);
+Route::get('/fpos/summary', [FPOController::class, 'getFPOsSummary']);
 Route::post('/fpo/register', [FPOController::class, 'store']);
 Route::get('/fpo/{id}', [FPOController::class, 'show']);
 Route::post('/fpo/{id}/update', [FPOController::class, 'update']);
